# datagen-ext

./: .env_info.txt  .gitignore  README.md  pyproject.toml
configs/: config_edge_cases.json  config_larger_csv.json  config_nested_structs.json  join_query.json  simple_table.json
docs/: design.md  developer_guide.md  features.md  getting_started.md  user_guide.md
notebooks/: datagen-ext-usage.ipynb
src/datagen_ext/: __init__.py  __main__.py  config_loader.py  config_models.py  errors.py  generator.py  logic.py  models.py  text_templates.py
src/datagen_ext/spec_generators/: __init__.py  base.py  employee_generator.py  uc_generator.py
synthetic_data_deterministic/Users/: .part-00000-1c154af5-3dfe-4a62-b724-4c0a90f5e8e2-c000.snappy.parquet.crc  .part-00001-1c154af5-3dfe-4a62-b724-4c0a90f5e8e2-c000.snappy.parquet.crc  .part-00002-1c154af5-3dfe-4a62-b724-4c0a90f5e8e2-c000.snappy.parquet.crc  .part-00003-1c154af5-3dfe-4a62-b724-4c0a90f5e8e2-c000.snappy.parquet.crc  part-00000-1c154af5-3dfe-4a62-b724-4c0a90f5e8e2-c000.snappy.parquet  part-00001-1c154af5-3dfe-4a62-b724-4c0a90f5e8e2-c000.snappy.parquet  part-00002-1c154af5-3dfe-4a62-b724-4c0a90f5e8e2-c000.snappy.parquet  part-00003-1c154af5-3dfe-4a62-b724-4c0a90f5e8e2-c000.snappy.parquet
tests/: test_example.py  test_generator.py
