[build-system]
requires = ["setuptools>=61.0"] # Or hatchling, flit_core etc.
build-backend = "setuptools.build_meta"

[project]
name = "datagen_ext"
version = "0.0.22"
description = "A new Python project: datagen-ext" # Add a brief description
readme = "README.md"
requires-python = ">=3.9.21" # Specify your minimum Python version
license = "MIT" # UPDATED: Use a simple string for the SPDX identifier
authors = [
  { name = "Your Name", email = "your.email@example.com" }, # Update with your details
]
classifiers = [ # Optional: PyPI classifiers
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Add your runtime dependencies here as needed
# Example: dependencies = ["pandas>=2.0", "requests"]
dependencies = [
    "dbldatagen==0.4.0.post1",
    "pydantic==2.8.2",
    "rapidfuzz>=3.13.0",
]

[project.optional-dependencies]
dev = [
    "pyspark==3.5.5",
    "databricks-sdk==0.40.0",
    "pytest",      # For running tests
    "jupyterlab",  # For notebooks
    "pandas>=2.2.3",
    "jmespath>=1.0.1",
    "pyparsing>=3.2.3",
    # Add other dev tools like black, ruff, mypy here if desired
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

# Optional: Define entry points for command-line scripts
[project.scripts]
datagen-ext = "datagen_ext.__main__:main" # Example CLI script

# Optional: Project URLs for PyPI
[project.urls]
Homepage = "https://github.com/anupkalburgi/datagen-ext" # Update USERNAME and repo name
Repository = "https://github.com/anupkalburgi/datagen-ext"
# Bug Tracker = "https://github.com/YOUR_USERNAME/datagen-ext/issues"
